# dada-model

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FRICTION.md  README.md  TODO.md  WIP.md  book.toml  dada-debug.rkt  info.rkt  judgment.css  justfile
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  mdbook.yml  rust.yml
.symposium/: config.toml
book/: book.toml
book/src/: SUMMARY.md  atomicity.md  classes.md  intro.md  notes.md  opsem.md  subtypes.md  tenets.md  type_checking.md  types.md  value_types.md
md/: SUMMARY.md  a-simple-function.md  borrowing.md  classes.md  comparing-permissions.md  giving.md  interpreter.md  intro.md  sharing.md  subpermissions.md  subtyping.md  wip.md
md/comparing-permissions/: copy-permissions.md  place-ordering.md
md/subpermissions/: copy-permissions.md  liveness.md
md/wip/: TEMPLATE.md  control-flow.md  drop-dangle-pop.md  formality-left-recursion-prompt.md  fresh-names.md  given-from-to-given-migration.md  interpreter-test-rework.md  introduce-elaborator.md  surface-syntax.md  type-error-analysis.md  unsafe.md  var-pop-normalization.md  vec.md
mdbook-anchorez/: Cargo.toml
mdbook-anchorez/src/: main.rs
mdbook-judgment/: Cargo.toml
mdbook-judgment/src/: main.rs
racket/: dada-debug.rkt  dada.rkt  grammar.rkt  lease-implication.rkt  opsem.rkt  type-manip.rkt  type-system.rkt  util.rkt
racket/integration-tests/: atomic.rkt  initialization.rkt  misc.rkt  (+9 more)
src/: dada.dfy  elaborator.rs  grammar.rs  interpreter.rs  lib.rs  main.rs  test.rs  test_util.rs  type_system.rs
(+150 files in other folders)
